--- a/server/HiNote/static/api.html
+++ b/server/HiNote/static/api.html
@@ -9,6 +9,10 @@
             margin: auto;
             text-align: center;
         }
+
+        ul {
+            list-style-type: none;
+        }
     </style>
 </head>
 <body>
@@ -19,11 +23,21 @@
             </p>
         <h1>To Create a Subscription</h1>
             <p class="sub">
-                Use <a href="createsub/">This Form</a> or submit a POST request to <a href="http://mlbvsnba.no-ip.org:8000/createsub/">http://mlbvsnba.no-ip.org:8000/createsub/</a> with:
+                Use <a href="createsub/">This Form</a> or submit a POST request to <a href="createsub/">http://mlbvsnba.no-ip.org:8000/createsub/</a> with:
                 <ul>
                     <li><b>api_key:</b> string - your api key returned by signup</li>
                     <li><b>name:</b> the name of the subscription list (limit is 50 chars and must be unique)</li>
                     <li><b>description:</b> the description of the subscription list (limit is 300 chars)</li>
+                </ul>
+            </p>
+        <h1>To Create/Push a Notification to a Subscription</h1>
+            <p class="sub">
+                Use <a href="pushnotif/">This Form</a> or submit a POST request to <a href="pushnotif/">http://mlbvsnba.no-ip.org:8000/pushnotif/</a> with:
+                <ul>
+                    <li><b>api_key:</b> string - your api key returned by signup</li>
+                    <li><b>sub_id:</b> int - the id of the subscription list that YOU OWN/CREATED and that you want to push the notification to</li>
+                    <li><b>contents:</b> string - the contents of your notification (limit is 300 chars)</li>
+                    <li><b>url:</b> string - optional - the url that should be associated with your notification</li>
                 </ul>
             </p>
     </div>
